--- a/sample/modules/service-tiles.html
+++ b/sample/modules/service-tiles.html
@@ -1,41 +1,41 @@
 <!-- BEGIN TILES -->
 <!-- TILE 1-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-1" style="background-image:url(/sample/images/service-tiles/driving-test.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-1" style="background-image:url(/sample/images/service-tiles/driving-test.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">Find a Traffic School</h2>
     </div>
 </div>
 
 <!-- TILE 2-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-2" style="background-image:url(/sample/images/service-tiles/student-driver.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-2" style="background-image:url(/sample/images/service-tiles/student-driver.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">Register Your Car</h2>
     </div>
 </div>
 
 <!-- TILE 3-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-3" style="background-image:url(/sample/images/service-tiles/service-find-job.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-3" style="background-image:url(/sample/images/service-tiles/service-find-job.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">Find a Job</h2>
     </div>
 </div>
 
 <!-- TILE 4-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-4" style="background-image:url(/sample/images/service-tiles/redwoods.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-4" style="background-image:url(/sample/images/service-tiles/redwoods.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">Find a State Park</h2>
     </div>
 </div>
 
 <!-- TILE 5-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-5" style="background-image:url(/sample/images/service-tiles/service-paid-family-leave.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-5" style="background-image:url(/sample/images/service-tiles/service-paid-family-leave.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">File for Paid Family Leave</h2>
     </div>
 </div>
 
 <!-- TILE 6-->
-<div tabindex="0" class="service-tile" data-tile-id="panel-6" style="background-image:url(/sample/images/service-tiles/service-file-unemployment.jpg); background-size: cover;">
+<div tabindex="0" class="service-tile bg-dark" data-tile-id="panel-6" style="background-image:url(/sample/images/service-tiles/service-file-unemployment.jpg); background-size: cover;">
     <div class="teaser">
         <h2 class="title h4">File for Unemployment</h2>
     </div>
