--- a/sample/typography.html
+++ b/sample/typography.html
@@ -140,8 +140,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 38px<br />
-                            line-height: 1.2
+                            font-size: 2.4rem (~38px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -154,8 +154,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 31px<br />
-                            line-height: 1.1
+                            font-size: 1.94rem (~31px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -168,8 +168,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 25px<br />
-                            line-height: 1.2
+                            font-size: 1.54rem (~25px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -182,8 +182,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 20px<br />
-                            line-height: 1.2
+                            font-size: 1.25rem (~20px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -196,8 +196,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 16px<br />
-                            line-height: 1.2
+                            font-size: 1rem (~16px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -210,8 +210,8 @@ var defaultActiveLink = "Components";
                         <span class="monospace font-size-70x">
                             font-family: 'Asap Condensed'<br />
                             font-weight: 500<br />
-                            font-size: 14px<br />
-                            line-height: 1.2
+                            font-size: 0.8rem (~14px)<br />
+                            line-height: 1.5
                         </span>
                     </div>
                 </div>
@@ -227,9 +227,17 @@ var defaultActiveLink = "Components";
            
                 <br /><br />
 
+                <hr />
+                <h2>Pharagraph text sizes</h2>
 
+                <h3>Lead paragraph (1.25rem) that is using class <code>.lead</code></h3>
+                <p class="lead">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
 
+                <h3>Regular paragraph (1.1rem)</h3>
+                <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
 
+                <h3>Small text paragraph (0.825rem) that is using class <code>.font-size-sm</code></h3>
+                <p class="font-size-sm">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
 
 
             </main>
