--- a/ssi/section-service-advertisement.html
+++ b/ssi/section-service-advertisement.html
@@ -1,7 +1,7 @@
 <div class="carousel owl-carousel carousel-content hidden-print">
     <div class="item backdrop" style="background-image: url('/images/main-banner2.jpg');">
         <div class="content-container">
-            <div class="content bg-transparent">
+            <div class="content">
                 <h2 class="text-3-5rem m-t-0">Experience New CA State Template</h2>
                 <p class="lead m-b-md">Cutting Edge features, toms of examples, regular updates</p>
                 <a class="btn btn-outline-light btn-hover" href="/sample/index.html">Learn More <span class="sr-only">about new State Template</span></a>
@@ -11,7 +11,7 @@
     
     <div class="item backdrop" style="background-image: url('/images/main-banner4.jpg');">
         <div class="content-container">
-            <div class="content bg-transparent">
+            <div class="content">
                 <h2 class="text-3-5rem m-t-0">180+ Reusable UI Components
                 </h2>
                 <p class="lead m-b-md">State Template includes over 180 ready to use code samples</p>
@@ -22,7 +22,7 @@
     
     <div class="item backdrop"  style="background-image: url('/images/main-banner5.jpg');">
         <div class="content-container">
-            <div class="content bg-transparent">
+            <div class="content">
                 <h2 class="text-3-5rem m-t-0">Use State Template CDN</h2>
                 <p class="lead m-b-md">Update your website faster by using State Template CDN </p>
                 <a class="btn btn-outline-light btn-hover" href="/cdn.html">Learn More <span class="sr-only">about CDN</span></a>
