--- a/sample/modules/section-content-test.html
+++ b/sample/modules/section-content-test.html
@@ -20,11 +20,12 @@
 
 <hr>
 
-<h3>Lists</h3>
-<h4>Overstated</h4>
-<!-- #include virtual="/sample/modules/list-overstated.html" -->
-<h4>Understated</h4>
-<!-- #include virtual="/sample/modules/list-understated.html" -->
-<h4>Standout</h4>
-<!-- #include virtual="/sample/modules/list-standout.html" -->
+<h3>List</h3>
+<ul class="list-overstated">
+    <li>Use: list-overstated</li>
+    <li>Facts</li>
+    <li>Government</li>
+    <li>History</li>
+</ul>
+
 <!-- <hr> -->
