--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -68,7 +68,7 @@ var defaultActiveLink = "Components";
 
             <div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
                 <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
-                    <h2 class="h3 text-center">SCROLL DOWN</h2>
+                    <h2 class="h3 text-center m-0 relative-centered">SCROLL DOWN</h2>
                 </div>
             </div>
             <div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
@@ -77,10 +77,10 @@ var defaultActiveLink = "Components";
                     <p class="text-center">height can be specified by adding height class, such as <code>.height-300</code></p>
                 </div>
             </div>
-            <div class="parallax-bg height-300 color-white" id="parallax-3" data-image-src="/images/main-banner4.jpg">
+            <div class="parallax-bg height-300 bg-dark" id="parallax-3" data-image-src="/images/main-banner4.jpg">
                 <div class="container p-y-lg">
-                    <h2 class="text-center">Light Text Color</h2>
-                    <p class="text-center">Make light text on dark backgrounds by adding class .color-white</p>
+                    <h2 class="text-center color-white">Light Text Color</h2>
+                    <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white</p>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@ var defaultActiveLink = "Components";
                 <div class="form-group">
 <textarea id="sample-panels" class="form-control" rows="17" cols="80"><div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
     <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
-        <h3 class="text-center">SCROLL DOWN</h3>
+        <h3 class="text-center m-0 relative-centered">SCROLL DOWN</h3>
     </div>
 </div>
 <div class="parallax-bg height-300" id="parallax-2" data-image-src="/images/bg-open-data.jpg">
@@ -102,10 +102,10 @@ var defaultActiveLink = "Components";
         <p class="text-center">height can be specified by adding height class, such as <code>.height-300</code></p>
     </div>
 </div>
-<div class="parallax-bg height-300 color-white" id="parallax-3" data-image-src="/images/main-banner4.jpg">
+<div class="parallax-bg height-300 bg-dark" id="parallax-3" data-image-src="/images/main-banner4.jpg">
     <div class="container p-y-lg">
-        <h2 class="text-center">Light Text Color</h2>
-        <p class="text-center">Make light text on dark backgrounds by adding class .color-white</p>
+        <h2 class="text-center color-white">Light Text Color</h2>
+        <p class="text-center color-white">Make light text on dark backgrounds by adding class .color-white</p>
     </div>
 </div></textarea>
 
