--- a/sample/index.html
+++ b/sample/index.html
@@ -57,52 +57,8 @@
                 as well as the source code that you can copy and past from should you need to. The following pages help to serve as a styleguide as well as documentation.
             </p>
 
-            <h2>Page Layout</h2>
-            <ul class="list-primary">
-                <li><a href="page-templates.html">Page Templates</a></li>
-                <li><a href="featured-search.html">Featured Search</a></li>
-                <li><a href="fixed-header.html">Fixed Header</a></li>
-                <li><a href="grid.html">Grid System </a></li>
-                <li><a href="breadcrumb.html">Breadcrumb</a></li>
-            </ul>
+           
 
-            <h2>Additional Example Pages</h2>
-            <ul class="list-primary">
-                <li><a href="/general-landing.html">Generic Landing Page</a></li>
-                <li><a href="/search-directory.html">Search Directory Page</a></li>
-                <li><a href="/business-profile.html">Business Profile Page</a></li>
-                <li><a href="/profile-landing.html">Profile Landing Page</a></li>
-            </ul>
-
-            <h2>Navigation Samples</h2>
-            <ul class="list-primary">
-                <li><a href="navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
-                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
-                <li><a href="navigation-single.html">Single Level Navigation</a></li>
-                <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-                <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
-                <li><a href="navigation-sidebar.html">Side Navigation</a></li>
-                <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
-                <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
-
-            </ul>
-
-            <h2>Color Schemes</h2>
-            <ul class="list-primary">
-                <li><a href="colorscheme-delta.html">Delta</a>
-                <li><a href="colorscheme-eureka.html">Eureka</a></li>
-                <li><a href="colorscheme-mono.html">Mono</a></li>
-                <li><a href="colorscheme-oceanside.html">Oceanside</a>
-                <li><a href="colorscheme-orangecounty.html">Orange County</a></li>
-                <li><a href="colorscheme-pasorobles.html">Paso Robles</a></li>
-                <li><a href="colorscheme-sacramento.html">Sacramento</a></li>
-                <li><a href="colorscheme-santabarbara.html">Santa Barbara</a></li>
-                <li><a href="colorscheme-santacruz.html">Santa Cruz</a></li>
-                <li><a href="colorscheme-shasta.html">Shasta</a></li>
-                <li><a href="colorscheme-sierra.html">Sierra</a></li>
-                <li><a href="colorscheme-trinity.html">Trinity</a></li>
-            </ul>
 
             <h2>Content Modules</h2>
             <ul class="list-primary">
@@ -168,16 +124,67 @@
                 <li><a href="toggle.html">Toggle</a></li>
                 <li><a href="typography.html">Typography</a></li>
             </ul>
-            <h2>CSS Shortcuts</h2>
-            <ul class="list-primary">
-                <li><a href="/shortcuts.html">CSS classes list and description </a></li>
-            </ul>
+
+            <h2>Page templates</h2>
+                        <ul class="list-primary">
+                            <li><a href="/sample/layout-about.html">About</a></li>
+                            <li><a href="/business-profile.html">Agency profile</a></li>
+                            <li><a href="/sample/layout-contact.html">Contact</a></li>
+                            <li><a href="/sample/layout-events.html">Events</a></li>
+                            <li><a href="/sample/layout-faq.html">FAQ</a>
+                            <li><a href="/general-landing.html">General Landing Page</a>
+                            <li><a href="/">Homepage</a></li>
+                            <li><a href="/sample/layout-news.html">News</a></li>
+                            <li><a href="/sample/layout-services.html">Services</a></li>
+                            <li><a href="/sample/layout-profile.html">User Profile</a></li>
+                            <li><a href="/search-directory.html">Search Directory</a></li>
+                        </ul>
 
 
             <h2>Dreamweaver Templates</h2>
             <ul class="list-primary">
                 <li><a href="dreamweaver-templates.html">Using Dreamweaver Templates</a></li>
             </ul>
+
+
+
+            <h2>Navigation Samples</h2>
+            <ul class="list-primary">
+                <li><a href="navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
+                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                <li><a href="navigation-single.html">Single Level Navigation</a></li>
+                <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
+                <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
+                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+                <li><a href="navigation-sidebar.html">Side Navigation</a></li>
+                <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
+                <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
+
+            </ul>
+
+            <h2>Color Schemes</h2>
+            <ul class="list-primary">
+                <li><a href="colorscheme-delta.html">Delta</a>
+                <li><a href="colorscheme-eureka.html">Eureka</a></li>
+                <li><a href="colorscheme-mono.html">Mono</a></li>
+                <li><a href="colorscheme-oceanside.html">Oceanside</a>
+                <li><a href="colorscheme-orangecounty.html">Orange County</a></li>
+                <li><a href="colorscheme-pasorobles.html">Paso Robles</a></li>
+                <li><a href="colorscheme-sacramento.html">Sacramento</a></li>
+                <li><a href="colorscheme-santabarbara.html">Santa Barbara</a></li>
+                <li><a href="colorscheme-santacruz.html">Santa Cruz</a></li>
+                <li><a href="colorscheme-shasta.html">Shasta</a></li>
+                <li><a href="colorscheme-sierra.html">Sierra</a></li>
+                <li><a href="colorscheme-trinity.html">Trinity</a></li>
+            </ul>
+
+            <h2>CSS Shortcuts</h2>
+            <ul class="list-primary">
+                <li><a href="/shortcuts.html">CSS classes list and description </a></li>
+            </ul>
+
+
+            
 
 
             <h2>Additional Bootstrap CSS & Components</h2>
