--- a/sample/modules/icon-blocks.html
+++ b/sample/modules/icon-blocks.html
@@ -4,7 +4,7 @@
         <!-- Icon Blocks -->
         <div class="shadow2 section-default text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
-                <i class="ca-gov-icon-ca-state"></i>
+                <span class="ca-gov-icon-ca-state relative-centered-y d-block" aria-hidden="true"></span>
             </span>
             <h3 class="h4 m-b-sm">Incredible standard post</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
@@ -16,7 +16,7 @@
         <!-- Icon Blocks -->
         <div class="shadow2 section-primary text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
-                <i class="ca-gov-icon-lightbulb"></i>
+                <span class="ca-gov-icon-lightbulb relative-centered-y d-block" aria-hidden="true"></span>
             </span>
             <h3 class="h4 m-b-sm">Job Opportunities</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
@@ -28,7 +28,7 @@
         <!-- Icon Blocks -->
         <div class="shadow2 section-standout text-center p-x-md p-b-lg">
             <span class="icon-block bg-blue-gradient rounded-50x">
-                <i class="ca-gov-icon-graduate"></i>
+                <span class="ca-gov-icon-graduate relative-centered-y d-block" aria-hidden="true"></span>
             </span>
             <h3 class="h4 m-b-sm">State Training</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
