--- a/sample/sections.html
+++ b/sample/sections.html
@@ -53,7 +53,7 @@
 
     <div id="main-content" class="main-content">
         <main class="main-primary">
-            <div class="container">
+            <div class="container p-b-lg">
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
                     <li><a href="index.html" title="Examples landing page">Examples</a></li>
@@ -61,7 +61,6 @@
                 </ol>
             </div>
 
-            <div class="section">
                 <div class="container">
                     <div class="group">
                         <div class="two-thirds">
@@ -107,7 +106,6 @@ $(document).ready(function() {
 
 
                 </div>
-            </div>
 
             <style>
                 .btn-row {
@@ -201,22 +199,6 @@ $(document).ready(function() {
                 </div>
             </div>
 
-            <!-- PARALLAX BACKGROUND -->
-            <div class="section section-standout">
-                <div class="parallax-bg" style="background-image:url(images/background.jpg)"></div>
-                <div class="container">
-                    <div class="group">
-                        <div class="half">
-                            <h2>Parallax Background</h2>
-                            <p>A parallax effect is a popular effect where the background appears to scroll at a sligtly slower speed than the foreground. To achieve this effect place a div inside <code class="color-s1">.section</code> just before the <code class="color-s1">.container</code> Depending on the amount of content (height of the section) some background images may look better than others. You may need a taller image for long sections. <em>The recommended approach is to use parallax sections only for short content areas.</em></p>
-                        </div>
-                        <div class="half">
-                            <h2>Source Code:</h2>
-                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/section-parallax.html" --></code></pre>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
             <!-- SECTION INVERTED -->
