--- a/ssi/global-footer.html
+++ b/ssi/global-footer.html
@@ -8,6 +8,7 @@
                     <li><a href="/use.html">Conditions of Use</a></li>
                     <li><a href="/privacy.html">Privacy Policy</a></li>
                     <li><a href="/accessibility.html">Accessibility</a></li>
+                    <li><a href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf">Accessibility Certification</a></li>
                     <li><a href="/contact.html">Contact Us</a></li>
                 </ul>
             </div>
