--- a/sample/typography.html
+++ b/sample/typography.html
@@ -6,8 +6,9 @@
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
-<head>    
-<!--    California State Template
+
+<head>
+    <!--    California State Template
 
     Based on Twitter Bootstrap
     -->
@@ -53,7 +54,7 @@
 
     <div id="main-content" class="main-content">
         <div class="section">
-            <main class="main-primary">            
+            <main class="main-primary">
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
                     <li><a href="index.html" title="Examples landing page">Examples</a></li>
@@ -63,8 +64,10 @@
                 <h1>Typography</h1>
 
                 <p class="lead">
-                    State of California websites have common typographic needs: clear and consistent headings, highly legible body paragraphs,
-                    clear labels, and easy-to-use input fields. We recommend a font system that uses open-source font family:
+                    State of California websites have common typographic needs: clear and consistent headings, highly
+                    legible body paragraphs,
+                    clear labels, and easy-to-use input fields. We recommend a font system that uses open-source font
+                    family:
                     Source Sans Pro, which is designed for legibility and can beautifully adapt to a variety
                     of visual styles.
                 </p>
@@ -78,13 +81,16 @@
                         <p>
                             Source Sans Pro is an open-source sans serif typeface created for legibility in UI design.
                             With a variety of weights that read easily at all sizes, Source Sans Pro provides clear
-                             and highly-readable body text.
+                            and highly-readable body text.
                         </p>
                         <p>
                             Inspired by twentieth-century American gothic typeface design, its slender but open letters
-                            offer a clean and friendly simplicity. Advanced hinting allows Source Sans Pro to render well
-                            on Windows systems which run Cleartype, and across browsers and devices. Moreover, it supports
-                            a variety of languages and alphabets, including Western and European language, Vietnamese, pinyin
+                            offer a clean and friendly simplicity. Advanced hinting allows Source Sans Pro to render
+                            well
+                            on Windows systems which run Cleartype, and across browsers and devices. Moreover, it
+                            supports
+                            a variety of languages and alphabets, including Western and European language, Vietnamese,
+                            pinyin
                             Romanization of Chinese, and Navajo.
                         </p>
                     </div>
@@ -96,7 +102,8 @@
                             <p class="text-tiny">0 1 2 3 4 5 6 7 8 9</p>
                         </div>
 
-                        <p><a class="btn btn-default" href="https://fonts.google.com/specimen/Source+Sans+Pro">View Source Sans Pro in Google Fonts</a></p>
+                        <p><a class="btn btn-default" href="https://fonts.google.com/specimen/Source+Sans+Pro">View
+                                Source Sans Pro in Google Fonts</a></p>
                     </div>
                 </div>
 
@@ -104,10 +111,12 @@
                     <div class="half">
                         <h3 class="h4">Asap Condensed</h3>
                         <p>
-                            Asap Condensed is an open-source sans serif typeface that in this template is used in page headings.
-                            It's a contemporary sans-serif family with subtle rounded corners. 
-                            Designed by Pablo Cosgaya and Nicolás Silva, Asap (“as soon as possible”) goes with a variety of weights. 
-                            
+                            Asap Condensed is an open-source sans serif typeface that in this template is used in page
+                            headings.
+                            It's a contemporary sans-serif family with subtle rounded corners.
+                            Designed by Pablo Cosgaya and Nicolás Silva, Asap (“as soon as possible”) goes with a
+                            variety of weights.
+
                         </p>
                         <p>
                             This family, specially developed for screen and desktop use,
@@ -124,7 +133,8 @@
                             <p class="text-tiny heading">0 1 2 3 4 5 6 7 8 9</p>
                         </div>
 
-                        <p><a class="btn btn-default" href="https://fonts.google.com/specimen/Source+Sans+Pro">View Source Sans Pro in Google Fonts</a></p>
+                        <p><a class="btn btn-default" href="https://fonts.google.com/specimen/Source+Sans+Pro">View
+                                Source Sans Pro in Google Fonts</a></p>
                     </div>
                 </div>
 
@@ -138,7 +148,7 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 2.4rem<br />
+                            font-size: 2.4rem (~38px)<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -152,7 +162,7 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 1.94rem<br />
+                            font-size: 1.94rem (~31px)<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -166,7 +176,7 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 1.54rem<br />
+                            font-size: 1.54rem (~25px)<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -180,7 +190,7 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 1.25rem<br />
+                            font-size: 1.25rem (~20px)<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -194,7 +204,7 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 1rem<br />
+                            font-size: 1rem (~16px)<br />
                             line-height: 1.5
                         </span>
                     </div>
@@ -208,26 +218,43 @@
                         <span class="monospace font-size-70x">
                             font-family: 'Source Sans Pro'<br />
                             font-weight: 400<br />
-                            font-size: 0.8rem<br />
+                            font-size: 0.8rem (~14px)<br />
                             line-height: 1.5
                         </span>
                     </div>
                 </div>
                 <hr />
                 <h2>Applying Web Font Into a Website</h2>
-                <p>To apply web font into a webpage following code needs to be copied into the &lt;head&gt; section of the HTML document:</p>
+                <p>To apply web font into a webpage following code needs to be copied into the &lt;head&gt; section of
+                    the HTML document:</p>
 
                 <pre><code class="language-html" data-lang="html"><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
 </code></pre>
                 <p class="m-t-lg">Also, use the following CSS rules to specify web font familiy:</p>
 
                 <pre><code class="language-html" data-lang="html"><span class="text-accent-p2">font-family:</span><span class="text-info">'Source Sans Pro', sans-serif;</span><br /><span class="text-accent-p2">font-family:</span><span class="text-info">'Asap Condensed', sans-serif;</span></code></pre>
-           
+
                 <br /><br />
 
 
 
+                <hr />
+                <h2>Pharagraph text sizes</h2>
 
+                <h3>Lead paragraph (1.25rem) that is using class <code>.lead</code></h3>
+                <p class="lead">Apparently we had reached a great height in the atmosphere, for the sky was a dead
+                    black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea
+                    to the level of the spectator on a hillside.</p>
+
+                <h3>Regular paragraph (1.1rem)</h3>
+                <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
+                    stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of
+                    the spectator on a hillside.</p>
+
+                <h3>Small text paragraph (0.825rem) that is using class <code>.font-size-sm</code></h3>
+                <p class="font-size-sm">Apparently we had reached a great height in the atmosphere, for the sky was a
+                    dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the
+                    sea to the level of the spectator on a hillside.</p>
 
 
             </main>
@@ -239,4 +266,5 @@
     <!--#include virtual="/ssi/scripts.html" -->
 
 </body>
+
 </html>
