updated navigation samples

--- a/sample/navigation-dropdown.html
+++ b/sample/navigation-dropdown.html
@@ -66,16 +66,15 @@ Based on Twitter Bootstrap
             <p>This page is using the Dropdown Navigation or Mininav.</p>
             <p>The dropdown menu displays a simple dropdown for sub navigation elements. This style of menu can be set by including the <code>.dropdown</code> class in the <code>&lt;nav&gt;</code> element.</p>
             <p><strong>Example:</strong> <br><code>&lt;nav id="navigation" class="main-navigation dropdown "&gt;</code> .</p> 
-            <p>In the template distribution this markup can be found in <code>/ssi/navigation.html</code>.
+            <p>In the template distribution this markup can be found in <code>/sample/modules/nav-dropdown.html</code>.
             
 <h2>More Navigation Samples</h2>
 <ul>
 
     <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-    <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
+    <li><a href="navigation-megamenu-flex.html">Flex Megamenu</a></li>
     <li><a href="navigation-single.html">Single Level Navigation</a></li>
-    <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
-    <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+    
 
 
 
