--- a/sample/navigation-single.html
+++ b/sample/navigation-single.html
@@ -72,9 +72,7 @@ Based on Twitter Bootstrap
 <ul>
 
     <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-    <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-    <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
-    <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+    <li><a href="navigation-megamenu-flex.html">Flex Megamenu</a></li>
     <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
 </ul>
      
