--- a/sample/modules/nav-singlelevel.html
+++ b/sample/modules/nav-singlelevel.html
@@ -1,24 +1,23 @@
 <!-- Top Level Navigation Only -->
-<nav id="navigation" class="main-navigation singlelevel auto-highlight">
+<nav id="navigation" class="main-navigation singlelevel">
     <ul id="nav_list" class="top-level-nav">
         	<li class="nav-item">
-            	<a href="/sample/" class="first-level-link"><span class="ca-gov-icon-gears"></span>Examples</a>
+            	<a href="/getting-started.html" class="first-level-link"><span class="ca-gov-icon-gears"></span>Getting Started</a>
+            </li>
+            <li class="nav-item">
+            	<a href="/sample/typography.html" class="first-level-link"><span class="ca-gov-icon-page" aria-hidden="true"></span>Typography</a>
             </li>
        		<li class="nav-item">
-            	<a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
-            </li>
-            
-            <li class="nav-item">
-            	<a href="/structure.html" class="first-level-link"><span class="ca-gov-icon-flowchart" aria-hidden="true"></span>Structure</a>
+            	<a href="/sample/color-schemes.html" class="first-level-link"><span class="ca-gov-icon-palette" aria-hidden="true"></span>Color Schemes</a>
             </li>
             <li class="nav-item">
-                <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
+                <a href="/sample/" class="first-level-link"><span class="ca-gov-icon-grid" aria-hidden="true"></span>Components</a>
         	</li>
             <li class="nav-item">
-                <a href="http://webstandards.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+                <a href="/sample/layouts.html" class="first-level-link"><span class="ca-gov-icon-responsive-alt" aria-hidden="true"></span>Template Pages</a>
         	</li>
              <li class="nav-item">
-                 <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
+                 <a href="/about.html" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>About</a>
         	</li>
         	<li class="nav-item" id="nav-item-search">
                 <button class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</button>
