--- a/sample/navigation-active.html
+++ b/sample/navigation-active.html
@@ -20,13 +20,21 @@ Based on Twitter Bootstrap
 
 <!--#include virtual="/ssi/head-css-js.html" -->
 
+<script type="text/javascript">
+  var defaultActiveLink = "Components";
+</script>
 </head>
 
 <body>
 
 <header role="banner" id="header" class="global-header">
   <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
+        <!-- Include Utility Header -->
+        <!--#include virtual="/ssi/utility-header.html" -->
 
+        <!-- Settings Bar -->
+        <!--#include virtual="/ssi/settings-bar.html" -->
+        
     <!-- Include Branding -->
     <!--#include virtual="/ssi/branding.html" -->
 
@@ -72,10 +80,10 @@ Based on Twitter Bootstrap
 
 <pre>
 &lt;script type="text/javascript"&gt;
-  var defaultActiveLink = "Examples";
+  var defaultActiveLink = "Components";
 &lt;/script&gt;
 </pre>
-      <p><span class="label label-info">NOTE:</span> This example finds the link with the text "Services" and set it as the active item (as seen on this page). </p>
+      <p><span class="label label-info">NOTE:</span> This example finds the navigation item with the text "Components" and set it as the active item (as seen on this page). </p>
 
         </main>
 
