--- a/sample/navigation-full-width-utility.html
+++ b/sample/navigation-full-width-utility.html
@@ -103,10 +103,8 @@ Based on Twitter Bootstrap
 
             <h2>More Navigation Samples</h2>
             <ul>
-                <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
-                <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
-                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                <li><a href="navigation-megamenu-flex.html">Flex Megamenu</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
 
             </ul>
