--- a/sample/navigation-sidebar.html
+++ b/sample/navigation-sidebar.html
@@ -133,9 +133,7 @@ var defaultActiveLink = "Examples";
             <ul>
 
                 <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
-                <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-                <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
-                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                <li><a href="navigation-megamenu-flex.html">Flex Megamenu</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
             </ul>
 
