--- a/sample/modules/accordion.html
+++ b/sample/modules/accordion.html
@@ -1,52 +1,74 @@
-<cagov-accordion>
-    <div class="card">
-        <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-            <div class="accordion-title">
-                <h4 id="employer-practices"><span class="ca-gov-icon-teleworking"></span> Family friendly practices for
-                    employers</h4>
-            </div>
-            <div class="plus-munus">
-                <cagov-plus></cagov-plus>
-                <cagov-minus></cagov-minus>
-            </div>
-        </button>
-        <div class="card-container" aria-hidden="true">
-            <div class="card-body">
-                <p>Follow this <a
-                        href="https://files.covid19.ca.gov/pdf/guidance-family-friendly-practices-employers--en.pdf">guidance
-                        for family friendly practices for employers</a> to keep employees safe and be responsive to
-                    their needs in order to ensure continued productivity. As workplaces reopen, employees will require
-                    both child care supports and workplace flexibility. Work-life balance policies will become even more
-                    important and continued investment in family-friendly workplace policies by employers is critical.
-                </p>
 
-            </div>
-        </div>
-    </div>
-</cagov-accordion>
 
 <cagov-accordion>
-    <div class="card">
-        <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-            <div class="accordion-title">
-                <h4 id="food-packing"><span class="ca-gov-icon-fastfood"></span> Food packing</h4>
+    <div class="cagov-accordion-card">
+      <button class="accordion-card-header accordion-alpha" type="button" aria-expanded="false">
+        <div class="accordion-title">Lorem ipsum</div>
+        <div class="plus-minus">
+          <cagov-plus>
+            <div class="accordion-icon" aria-hidden="true">
+              <svg viewbox="0 0 25 25">
+                <title>Plus</title>
+                <line x1="6" y1="12.5" x2="19" y2="12.5" fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+                <line y1="6" x1="12.5" y2="19" x2="12.5" fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+              </svg>
             </div>
-            <div class="plus-munus">
-                <cagov-plus></cagov-plus>
-                <cagov-minus></cagov-minus>
+          </cagov-plus>
+          <cagov-minus>
+            <div class="accordion-icon" aria-hidden="true">
+              <svg viewbox="0 0 25 25">
+                <title>Minus</title>
+                <line x1="6" y1="12.5" x2="19" y2="12.5"  fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+              </svg>
             </div>
-        </button>
-        <div class="card-container" aria-hidden="true">
-            <div class="card-body">
-                <p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-food-packing--en.pdf">guidance<strong>
-                        </strong>for facilities that process or pack meat, dairy, or produce</a> to create a safer
-                    environment for workers.</p>
-                <p>Review the guidance, prepare a plan, and post the <a
-                        href="https://files.covid19.ca.gov/pdf/checklist-food-packing--en.pdf">checklist for facilities
-                        that process or pack meat, dairy or produce</a> in your workplace to show customers and
-                    employees that you&#8217;ve reduced the risk and are open for business.</p>
-
-            </div>
+          </cagov-minus>
         </div>
+      </button>
+      <div class="accordion-card-container" aria-hidden=" true" style="height: 0px;">
+        <div class="card-body">
+          <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+            moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+            Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+            shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+            proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
+            aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
+        </div>
+      </div>
     </div>
 </cagov-accordion>
+<cagov-accordion>
+    <div class="cagov-accordion-card">
+        <button class="accordion-card-header accordion-alpha" type="button" aria-expanded="false">
+          <div class="accordion-title">Lorem ipsum 2</div>
+          <div class="plus-minus">
+            <cagov-plus>
+              <div class="accordion-icon" aria-hidden="true">
+                <svg viewbox="0 0 25 25">
+                  <title>Plus</title>
+                  <line x1="6" y1="12.5" x2="19" y2="12.5" fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+                  <line y1="6" x1="12.5" y2="19" x2="12.5" fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+                </svg>
+              </div>
+            </cagov-plus>
+            <cagov-minus>
+              <div class="accordion-icon" aria-hidden="true">
+                <svg viewbox="0 0 25 25">
+                  <title>Minus</title>
+                  <line x1="6" y1="12.5" x2="19" y2="12.5"  fill="none" stroke="currentColor" stroke-width="6" stroke-linecap="round" vector-effect="non-scaling-stroke" />
+                </svg>
+              </div>
+            </cagov-minus>
+          </div>
+        </button>
+        <div class="accordion-card-container" aria-hidden=" true" style="height: 0px;">
+          <div class="card-body">
+            <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+              moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+              Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
+              shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+              proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
+              aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</p>
+          </div>
+        </div>
+      </div>
+  </cagov-accordion>
