--- a/ssi/settings-bar.html
+++ b/ssi/settings-bar.html
@@ -13,6 +13,6 @@
             <div class="btn-group"><button type="button" class="btn btn-standout decreaseTextSize"><span class="hidden-xs">Decrease Font Size</span><span class="visible-xs">Font <span class="sr-only">Decrease</span><span class="ca-gov-icon-minus-line font-size-sm" aria-hidden="true"></span></span></button></div>
             <div class="btn-group"><button type="button" class="btn btn-standout dyslexicFont">Dyslexic Font</button></div>
         </div>
-        <button type="button" class="close" data-toggle="collapse" data-target="#siteSettings" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <button type="button" class="close" data-bs-toggle="collapse" data-bs-target="#siteSettings" aria-label="Close"><span aria-hidden="true" class=" ca-gov-icon-close-mark"></span></button>
     </div>
 </div>
