--- a/index.html
+++ b/index.html
@@ -1,80 +1,72 @@
 ﻿<!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
-<!--[if (gt IE 9)]><!--><html class="no-js" lang="en">
-<!--<![endif]-->
+<!--[if IE 7]> <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]> <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if IE 9]> <html class="no-js ie9 oldie" lang="en"> <![endif]-->
+<!--[if (gt IE 9)]><!-->
+<html class="no-js" lang="en">
+    <!--<![endif]-->
 
-                        <head>    
- <!--    California State Template (beta)
- 
+    <head>
+        <!-- California State Template (beta) Based on Twitter Bootstrap -->
+        <meta charset="utf-8">
+        <title>California State Website Template (Version 6)</title>
+        <meta name="Author" content="State of California"/>
+        <meta name="Description" content="State of California"/>
+        <meta name="Keywords" content="California, government"/>
+        <!--#include virtual="/ssi/head-css-js.html" -->
 
-        Based on Twitter Bootstrap
-    -->
-    <meta charset="utf-8">
-    <title>California State Website Template (Version 6)</title>
-    <meta name="Author" content="State of California" />
-    <meta name="Description" content="State of California" />
-    <meta name="Keywords" content="California, government" />
-    <!--#include virtual="/ssi/head-css-js.html" -->
+    </head>
 
+    <!-- possible body classes are "primary" and "two-column" -->
+    <body class="primary">
 
-</head>
+        <header role="banner" id="header" class="global-header fixed">
+            <div id="skip-to-content">
+                <a href="#main-content">Skip to Main Content</a>
+            </div>
+            <!-- Include Utility Header -->
+            <!--#include virtual="/ssi/utility-header.html" -->
+            <!-- Settings Bar -->
+            <!--#include virtual="/ssi/settings-bar.html" -->
+            <!-- Include Branding -->
+            <!--#include virtual="/ssi/branding-lightgrey.html" -->
+            <!-- Include Mobile Controls -->
+            <!--#include virtual="/ssi/mobile-controls.html" -->
 
-<!-- possible body classes are "primary" and "two-column" -->
-<body class="primary">
+            <div class="navigation-search full-width-nav container">
+                <div id="head-search" class="search-container featured-search">
+                    <!-- Include Search -->
+                    <!--#include virtual="/ssi/search.html" -->
+                </div>
 
+                <!-- Include Navigation -->
+                <!--#include virtual="/ssi/navigation.html" -->
+            </div>
 
-<header role="banner" id="header" class="global-header fixed">
-    <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
-    <!-- Include Utility Header -->
-    <!--#include virtual="/ssi/utility-header.html" -->
-    <!-- Settings Bar -->
-    <!--#include virtual="/ssi/settings-bar.html" -->
-    <!-- Include Branding -->
-    <!--#include virtual="/ssi/branding-lightgrey.html" -->
-    <!-- Include Mobile Controls -->
-    <!--#include virtual="/ssi/mobile-controls.html" -->
+            <div class="header-decoration"></div>
+        </header>
 
-    <div class="navigation-search full-width-nav container">
-        <div id="head-search" class="search-container featured-search fade">
-            <!-- Include Search -->
-            <!--#include virtual="/ssi/search.html" -->
+        <div id="main-content" class="main-content">
+            <!-- Include for optional slideshow banner -->
+            <section aria-label="hero banner">
+                <!--#include virtual="/ssi/header-large-banner.html" -->
+            </section>
+
+            <main class="main-primary">
+                <!-- Begin Main Content -->
+                <!--#include virtual="/ssi/section-icon-blocks.html" -->
+                <!--#include virtual="/ssi/section-service-advertisement.html" -->
+                <!--#include virtual="/ssi/section-green-stats.html" -->
+                <!--#include virtual="/ssi/news.html" -->
+                <!--#include virtual="/ssi/section-footer2.html" -->
+                <!-- End Main Content -->
+            </main>
         </div>
 
-        <!-- Include Navigation -->
-        <!--#include virtual="/ssi/navigation.html" -->
-    </div>
+        <!--#include virtual="/ssi/global-footer.html" -->
+        <!--#include virtual="/ssi/scripts.html" -->
 
-    <div class="header-decoration"></div>
-</header>
-
-
-
-
-
-<div id="main-content" class="main-content">
-    <!-- Include for optional slideshow banner -->
-    <section aria-label="hero banner">
-    <!--#include virtual="/ssi/header-large-banner.html" -->
-    </section>
-
-    <main class="main-primary">
-        <!-- Begin Main Content -->
-        <!--#include virtual="/ssi/section-icon-blocks.html" -->
-        <!--#include virtual="/ssi/section-service-advertisement.html" -->
-        <!--#include virtual="/ssi/section-green-stats.html" -->
-        <!--#include virtual="/ssi/news.html" -->
-        <!--#include virtual="/ssi/section-footer2.html" -->
-        <!-- End Main Content -->
-    </main>
-</div>
-
-<!--#include virtual="/ssi/global-footer.html" -->
-<!--#include virtual="/ssi/scripts.html" -->
-
-
-</body>
+    </body>
 
 </html>
